src/test/resources/parse/accept/multipleFunctions.ul
int id1 () {
}

int id2 () {
}

int id3 () {
}

int id4 () {
}
