src/test/resources/parse/reject/printlnNoExpression.ul
int id1 ()
{
    println;
}
